# number-obfuscate-library

./: CMakeLists.txt  Readme.md
cmake/: SetEnv.cmake
examples/: CMakeLists.txt  main.cpp  test.cpp
number_obfuscate/: CMakeLists.txt  number_obfuscate.cpp  number_obfuscate.h
number_obfuscate/Node/: Node.cpp  Node.h  ObfuscateConfig.h
number_obfuscate/Node/Decorator/: AbstractDecorator.h  Decorator.cpp  Decorator.h  DecoratorFactory.cpp  DecoratorFactory.h
number_obfuscate/Node/Operator/: AbstractOperator.h  Operator.cpp  Operator.h  OperatorFactory.cpp  OperatorFactory.h  OperatorInterface.h
tests/: CMakeLists.txt  mainTest.cpp
